--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -146,6 +146,9 @@
 \newcommand{\action}{a}
 \newcommand{\ArithExpr}{\mathcal{AE}} % (#1)% set of all constraints over some set
 \newcommand{\ArithExprD}{\ArithExpr(\DVar)}
+\newcommand{\ArithExprR}{\ArithExpr(\RVar)}
+\newcommand{\ArithExprI}{\ArithExpr(\IVar)}
+\newcommand{\ArithExprB}{\ArithExpr(\BVar)}
 \newcommand{\C}{C}
 \newcommand{\Cinit}{\C_\init} % initial constraint
 \newcommand{\Clock}{X} % set of clocks
@@ -158,6 +161,18 @@
 \newcommand{\DVar}{D} % set of discrete variables
 \newcommand{\dvar}{d} % discrete variable
 \newcommand{\DVarCard}{J} % cardinality of discrete variables
+\newcommand{\rval}{\ensuremath{\rho}} % rational variable
+\newcommand{\RVar}{R} % set of rational variables
+\newcommand{\rvar}{r} % rational variable
+\newcommand{\RVarCard}{J} % cardinality of rational variables
+\newcommand{\ival}{\ensuremath{\i}} % integer variable
+\newcommand{\IVar}{I} % set of integer variables
+\newcommand{\ivar}{i} % integer variable
+\newcommand{\IVarCard}{K} % cardinality of integer variables
+\newcommand{\bval}{\ensuremath{\beta}} % boolean variable
+\newcommand{\BVar}{B} % set of boolean variables
+\newcommand{\bvar}{b} % boolean variable
+\newcommand{\BVarCard}{L} % cardinality of boolean variables
 % \newcommand{\DVarinit}{\DVar_\init} % discrete variable
 \newcommand{\edge}{e}
 \newcommand{\flow}{\ensuremath{\mathit{flow}}}
