--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -199,7 +199,7 @@ A graphical representation of the \IPTA{} \styleIMI{observer} is given in \cref{
 \paragraph{Initial definitions}
 The initial state is defined the part of the file following \styleIMI{init :=}.
 This part must contain the initial location of each \IPTA{}.
-For example, \styleIMI{loc[proc1] = idle1} states that \styleIMI{proc1} is initially in location \styleIMI{idle1}.
+For example, \styleIMI{loc[proc1] := idle1} states that \styleIMI{proc1} is initially in location \styleIMI{idle1}.
 
 The initial definition may (only may, see \cref{section:init}) give an initial value to the clocks, for example requiring them to be equal to some constant (typically~0).
 Here, clocks are only bound to be greater or equal to~0.
@@ -211,9 +211,7 @@ Finally, parameters are bound to be positive or null (this is not assumed by def
 
 Note that the initial definition can introduce more complex constraints on clocks, parameters and discrete variables; see \cref{section:init} for details.
 
-\paragraph{New initial definitions section}
-
-Since \imitator{} 3.1, an \imitator{} model accept a new form of initial definition section that separate discrete initializations from initial constraints. You can see it, commented, on the model above.
+Since \imitator{} 3.1, an \imitator{} model accept a new form of initial definition section that separate discrete initializations from initial constraints.
 
 This new section introduce a more powerful initialization system allowing initialization of discrete variables by constant expressions. It mean that it's possible to initialize any discrete variables of any type (proposed by \imitator{}) with an expression that can be resolved at compile time (use of variables is forbbiden). It's also the only way to initialize discrete integer and discrete boolean variables.
 
