--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -1,13 +1,16 @@
 @inproceedings{AAPP21,
-  	author =	{Andr{\'e}, {\'E}tienne and Arias, Jaime and Petrucci, Laure and Van de Pol, Jaco},
-  	title =	{Iterative Bounded Synthesis for Efficient Cycle Detection in Parametric Timed Automata},
-	year =	{2021},
+  	author		=	{Andr{\'e}, {\'E}tienne and Arias, Jaime and Petrucci, Laure and Van de Pol, Jaco},
+  	title		=	{Iterative Bounded Synthesis for Efficient Cycle Detection in Parametric Timed Automata},
+	year		=	{2021},
 	booktitle = {Proceedings of the 27th International Conference on Tools and Algorithms for the Construction and Analysis of Systems ({TACAS} 2021)},
-	SHORTbooktitle = {{TACAS}},
-	editor = {Jan Friso Groote and Larsen, Kim G.},
-	location = {virtual},
-	eventdate = {2021-03-27/2021-04-01},
-	note = {To appear},
+	SHORTbooktitle	= {{TACAS}},
+	editor		= {Jan Friso Groote and Larsen, Kim G.},
+	location	= {Virtual},
+	eventdate	= {2021-03-27/2021-04-01},
+	doi			= {10.1007/978-3-030-72016-2_17},
+	pages		= {311-329},
+	publisher	= {Springer},
+	volume		= {12651},
 }
 
 
@@ -578,8 +581,8 @@
 	editor    = {Axel Legay and
 	Tiziana Margaria},
 	title     = {{JANI}: Quantitative Model and Tool Interaction},
-	longbooktitle = {Proceedings of the 23rd International Conference on Tools and Algorithms for the Construction and Analysis of Systems ({TACAS} 2017), Part {II}, Held as Part of the European Joint Conferences on Theory and Practice of Software ({ETAPS} 2017)},
-	booktitle = {{TACAS}},
+	booktitle = {Proceedings of the 23rd International Conference on Tools and Algorithms for the Construction and Analysis of Systems ({TACAS} 2017), Part {II}, Held as Part of the European Joint Conferences on Theory and Practice of Software ({ETAPS} 2017)},
+	SHORTbooktitle = {{TACAS}},
 	eventdate = {2017-04-22/2017-04-29},
 	location  = {Uppsala, Sweden},
 	series    = {\LNCS{}},
