--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -281,7 +281,7 @@
 
 
 % Current version
-\newcommand{\imitatorversion}{3.1}
+\newcommand{\imitatorversion}{3.1-beta}
 \newcommand{\imitatorversionname}{Cheese Artichoke}
 
 
